# sencles_simple

./: .gitignore  CMakeLists.txt  README.md  env_setup.ps1  sdkconfig
components/LinkSDK/: CMakeLists.txt
components/LinkSDK/LinkSDK_main_task/: LinkSDK_main_task.c  LinkSDK_main_task.h
components/LinkSDK/core/sysdep/: core_adapter.c
components/LinkSDK/link_main/: link_main.c
components/LinkSDK/portfiles/: README.md  posix_port.c
components/aliyun/: .cproject  .project  CMakeLists.txt
components/aliyun/aliyun_main_task/: LinkSDK_main_task.h
components/bus/: Kconfig  i2c_bus.c
components/button/: .cproject  CMakeLists.txt  iot_button.c
components/dtimer/: CMakeLists.txt  dtimer.c
components/ir_gree_transceiver/: .cproject  .project  CMakeLists.txt  ir_gree_encoder.c  ir_gree_transceiver_main.c
components/ir_nec_transceiver/: CMakeLists.txt  ir_gree_encoder.c  ir_gree_transceiver_main.c
components/led_strip/: CMakeLists.txt  Kconfig  Kconfig.projbuild  led_strip.c  led_strip_encoder.c  (+1 more)
components/sensor/: .cproject  .project  CMakeLists.txt  Kconfig
components/sensor/sensor_hub/: iot_sensor_hub.c  sensor_hub_main_task.c
components/sensor/sensor_hub/hal/: humiture_hal.c  imu_hal.c  light_sensor_hal.c
components/sensor/sensor_hub/include/: iot_sensor_hub.h  sensor_event.h  sensor_hub_main_task.h  sensor_type.h
components/sensor/sensor_hub/include/hal/: humiture_hal.h  imu_hal.h  light_sensor_hal.h
components/sensor/sht3x/: sht3x.c
components/sensor/sht3x/include/: sht3x.h
components/sensor/sht4x/: sht4x.c
components/sensor/sht4x/include/: sht4x.h
components/sensor/veml7700/: .cproject  .project  CMakeLists.txt  README.md  veml7700.c
components/sensor/veml7700/include/: veml7700.h
components/typec_pd/: CMakeLists.txt  Kconfig  platform.c  typec_pd_main_task.c
components/typec_pd/core/: Log.c  Log.h  PDPolicy.c  PDPolicy.h  PDProtocol.c  PDProtocol.h  PD_Types.h  Port.c  Port.h  TypeC.c  TypeC.h  core.c  core.h  fusb30X.c  fusb30X.h  platform.h  timer.c  timer.h  vendor_info.c  vendor_info.h  vif_macros.h
components/typec_pd/core/modules/: HostComm.c  HostComm.h  dpm.c  dpm.h  hcmd.h  observer.c  observer.h
components/typec_pd/core/vdm/: bitfield_translators.c  bitfield_translators.h  fsc_vdm_defs.h  vdm.c  vdm.h  vdm_callbacks.c  vdm_callbacks.h  vdm_callbacks_defs.h  vdm_types.h
components/typec_pd/core/vdm/DisplayPort/: dp.c  dp.h  dp_types.h
components/typec_pd/include/: FSCTypes.h  typec_pd_main_task.h
main/: CMakeLists.txt  main.c  main.h  main_group_config.h
(+65 files in other folders)
